--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.2",
     "nanoid": "^4.0.0",
     "notiflix": "^3.2.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "sass": "^1.57.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
